--- a/host/ProtocolGateway.Host.Console/packages.config
+++ b/host/ProtocolGateway.Host.Console/packages.config
@@ -9,30 +9,34 @@
   <package id="EnterpriseLibrary.SemanticLogging" version="2.0.1406.1" targetFramework="net451" />
   <package id="EnterpriseLibrary.SemanticLogging.TextFile" version="2.0.1406.1" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net451" />
-  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net451" />
-  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net451" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net451" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net451" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net451" />
   <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="net451" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net451" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net451" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net451" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net451" />
   <package id="System.Collections" version="4.3.0" targetFramework="net451" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net451" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net451" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net451" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net451" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net451" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net451" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net451" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net451" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net451" />
   <package id="System.IO" version="4.3.0" targetFramework="net451" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net451" />
   <package id="System.Linq" version="4.3.0" targetFramework="net451" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net451" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net451" />
   <package id="System.Net.Http" version="4.3.0" targetFramework="net451" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net451" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net451" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net451" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net451" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net451" />
@@ -44,7 +48,7 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net451" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net451" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net451" />
-  <package id="System.Spatial" version="5.7.0" targetFramework="net451" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net451" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net451" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net451" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net451" />
@@ -54,5 +58,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net451" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net451" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net451" />
-  <package id="WindowsAzure.Storage" version="7.0.0" targetFramework="net451" />
+  <package id="WindowsAzure.Storage" version="8.7.0" targetFramework="net451" />
 </packages>
