--- a/src/ProtocolGateway.IotHubClient/app.config
+++ b/src/ProtocolGateway.IotHubClient/app.config
@@ -58,6 +58,10 @@
         <assemblyIdentity name="Microsoft.Azure.Devices.Shared" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.15.1.0" newVersion="1.15.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Validation" publicKeyToken="2fc06f0d701809a7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.0.0" newVersion="2.4.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
