--- a/test/ProtocolGateway.Tests.Load/packages.config
+++ b/test/ProtocolGateway.Tests.Load/packages.config
@@ -10,16 +10,18 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.Azure.Amqp" version="2.3.2" targetFramework="net46" />
-  <package id="Microsoft.Azure.Devices" version="1.2.4" targetFramework="net46" />
+  <package id="Microsoft.Azure.Devices" version="1.17.0" targetFramework="net46" />
   <package id="Microsoft.Azure.Devices.Shared" version="1.15.1" targetFramework="net46" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net46" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="Mono.Security" version="5.4.0.201" targetFramework="net46" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="net46" />
   <package id="PInvoke.BCrypt" version="0.5.155" targetFramework="net46" />
   <package id="PInvoke.Kernel32" version="0.5.155" targetFramework="net46" />
@@ -75,5 +77,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
-  <package id="Validation" version="2.2.8" targetFramework="net46" />
+  <package id="Validation" version="2.4.18" targetFramework="net46" />
 </packages>
