--- a/test/ProtocolGateway.Tests/packages.config
+++ b/test/ProtocolGateway.Tests/packages.config
@@ -12,24 +12,29 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.Azure.Amqp" version="2.3.2" targetFramework="net46" />
-  <package id="Microsoft.Azure.Devices" version="1.2.4" targetFramework="net46" />
-  <package id="Microsoft.Azure.Devices.Client" version="1.2.10" targetFramework="net46" />
+  <package id="Microsoft.Azure.Devices" version="1.17.0" targetFramework="net46" />
+  <package id="Microsoft.Azure.Devices.Client" version="1.18.0" targetFramework="net46" />
   <package id="Microsoft.Azure.Devices.Shared" version="1.15.1" targetFramework="net46" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.Azure.Services.AppAuthentication" version="1.0.3" targetFramework="net46" />
-  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net46" />
-  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net46" />
-  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net46" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net46" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net46" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net46" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net46" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net46" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net46" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net46" />
   <package id="Mono.Security" version="5.4.0.201" targetFramework="net46" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="net46" />
   <package id="PInvoke.BCrypt" version="0.5.155" targetFramework="net46" />
   <package id="PInvoke.Kernel32" version="0.5.155" targetFramework="net46" />
@@ -40,14 +45,16 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net46" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net46" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net46" />
   <package id="System.Console" version="4.3.0" targetFramework="net46" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net46" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net46" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net46" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net46" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net46" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net46" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net46" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net46" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net46" />
   <package id="System.IO" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net46" />
@@ -55,8 +62,10 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Linq" version="4.3.0" targetFramework="net46" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net46" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net46" />
   <package id="System.Net.Http" version="4.3.0" targetFramework="net46" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net46" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net46" />
   <package id="System.Net.WebSockets" version="4.0.0" targetFramework="net46" />
   <package id="System.Net.WebSockets.Client" version="4.0.2" targetFramework="net46" />
@@ -77,7 +86,7 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net46" />
-  <package id="System.Spatial" version="5.7.0" targetFramework="net46" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net46" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net46" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net46" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net46" />
@@ -87,9 +96,9 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
-  <package id="Validation" version="2.2.8" targetFramework="net46" />
+  <package id="Validation" version="2.4.18" targetFramework="net46" />
   <package id="WindowsAzure.ServiceBus" version="5.0.0" targetFramework="net46" />
-  <package id="WindowsAzure.Storage" version="7.0.0" targetFramework="net46" />
+  <package id="WindowsAzure.Storage" version="8.7.0" targetFramework="net46" />
   <package id="xunit" version="2.1.0" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net46" />
